[package]
name = "tso"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
lalrpop-util = {version = "0.22.1", features = ["lexer", "unicode"]}
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[build-dependencies]
lalrpop = "0.22.1"
